welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:2: error: type mismatch;
 found   : Boolean(false)
 required: Int
	if (isBirthday==true) return false
                                     ^caughtSpeeding:6: error: type mismatch;
 found   : Unit
 required: Int
	if (speed>=81) return 2
        ^