welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
	if (isBirthday==true) return false
	else {	
	if (speed<=60) return 0
	if (speed<=61 && speed>=80) return 1
	if (speed>=81) return 2
	
}}
